<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.contactscrud.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
 />

    <fragment
        android:id="@+id/navigation_generator"
        android:name="com.example.contactscrud.Generator"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_generator" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.example.contactscrud.Scanner"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_scanner" />
</navigation>