<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Home"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="665dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/enter_text_here"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/click_here_to_generate_qr_code"
            android:textAllCaps="false"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo1"
            android:src="@android:drawable/ic_dialog_email" />


    </LinearLayout>

</LinearLayout>